--- a/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.scss
+++ b/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.scss
@@ -146,16 +146,38 @@
     }
   }
 
-  .dialog__title{
-    font-size: 24px;
-    font-weight: 700;
-    color: #CD0005;
+  .mat-dialog-title {
+    // height: 120px;
+    border-bottom: 0.05px solid #ccc;
   }
-  .dialog__subtitle{
-    color: #4D4D4D;
+
+  .dialog-content-wrapper {
+    max-height: 85vh;
+    display: flex;
+    flex-direction: column;
   }
-  .dialog__btn--primary{
-    background-color: #27AE60;
-    color: white;
+
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+  }
+
+  th,
+  td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  .responsive {
+    overflow-x: auto;
+    max-height: 400px;
+    overflow-y: auto;
+    border: 1px solid #ddd;
   }
 }
