Fixes language issues

--- a/src/app/pages/delivery-management/courier-management/edit/courier-edit-management.component.html
+++ b/src/app/pages/delivery-management/courier-management/edit/courier-edit-management.component.html
@@ -18,7 +18,7 @@
           </mat-form-field>
           <div fxLayout="row" fxFlex="100">
             <mat-form-field fxFlex="5" fxFlex.xs="30" class="is-light form-primary">
-              <input matInput value="ls.locale.global.country_calling_code" readonly>
+              <input matInput value="{{ ls.locale.global.country_calling_code }}" readonly>
             </mat-form-field>
             <mat-form-field fxFlex="95" fxFlex.xs="70" class="is-light form-primary">
               <input matInput type="tel" min="0" formControlName="contact"
