--- a/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
+++ b/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
@@ -290,6 +290,11 @@
             <ngx-datatable-column name="Region" prop="region_code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Division" prop="division_code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="IR Check" prop="ir_verification" [sortable]="false"></ngx-datatable-column>
+            <ngx-datatable-column name="Reblast Type" [sortable]="false">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <span>{{ row.type + ' ' + (row.increment ? row.increment : '') }}</span>
+              </ng-template>
+            </ngx-datatable-column>
             <ngx-datatable-column name="Status Misi" prop="status_misi" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Status Coin" prop="status_coin" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Tanggal Submit Misi" [sortable]="false" [width]="180">
