ADD: reminder at create banner

--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -722,7 +722,7 @@
           <button mat-raised-button type="button" (click)="submit('draft')" fxFlex="20">
             SIMPAN SEBAGAI DRAF
           </button>
-          <button mat-raised-button type="button" class="confirmation-button" (click)="submit('publish')" fxFlex="20">
+          <button mat-raised-button type="button" class="confirmation-button" (click)="openReminder()" fxFlex="20">
             SIMPAN DAN KIRIM
           </button>
         </div>
