--- a/src/@fuse/scss/partials/_icons.scss
+++ b/src/@fuse/scss/partials/_icons.scss
@@ -1,4 +1,4 @@
-i,
+i:not(.italic),
 mat-icon {
     font-size: 24px;
     width: 24px;
@@ -26,4 +26,8 @@ mat-icon {
             }
         }
     }
+}
+
+i.italic {
+    color: inherit;   
 }
