CDE-4243-country-setup: - cleanup routing

--- a/src/app/pages/user-management/language-setup/language-setup.component.html
+++ b/src/app/pages/user-management/language-setup/language-setup.component.html
@@ -3,7 +3,7 @@
   <page-content-header [contentTitle]="'Language'">
     <div class="button-row" fxLayout="row">
       <button *ngIf="true" style="width: 170px;" mat-raised-button aria-label="Login" type="button"
-        [routerLink]="['/user-management','language-setup','create']">
+        [routerLink]="['/user-management','languages','create']">
         <mat-icon>add</mat-icon>{{ ls.locale.global.button.add }}
       </button>
     </div>
