ADD: new button at b2c voucher edit

--- a/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.scss
+++ b/src/app/pages/b2c-voucher/edit/tab/preview-voucher/preview-voucher.component.scss
@@ -69,3 +69,20 @@ button.publish-button {
   color: #fff;
   font-weight: 300;
 }
+button.save-button {
+  background-color: #FFC000;
+  color: #000000DE;
+  font-weight: 300;
+}
+button.reject-button {
+  background-color: #FF0000;
+  color: #fff;
+  font-weight: 300;
+  margin-left: 20px;
+}
+button.disabled-1 {
+  background-color: #5A5A5A;
+}
+button.disabled-2 {
+  background-color: #808080;
+}
